Components: Fix some overflowing images.

--- a/apps/web/src/components/Footer/footer.module.scss
+++ b/apps/web/src/components/Footer/footer.module.scss
@@ -17,8 +17,16 @@
 
         .flag,
         .social-icon {
+            overflow: hidden;
             height: 2.75rem;
             width: auto;
+
+            imng {
+                height: 100%;
+                width: 100%;
+                object-fit: contain;
+                object-position: center;
+            }
         }
 
         .social-icon {
